# Openterface_QT

./: .gitignore  ACTION_PLAN.md  ALL_PERMISSION_FIXES.md  BEFORE_AND_AFTER_V2.md  CH340WarningDialog.cpp  CH340WarningDialog.h  CH340WarningDialog.ui  CMakeLists.txt  COMPLETE_FIX_SUMMARY.md  CRASH_FIX_SUMMARY.md  DELIVERABLES.md  DOCKER_TEST_FIXES.md  Dockerfile.raspbian  FEDORA_QT_QUICKSTART.sh  FEDORA_QT_SOLUTION_COMPLETE.md  FINAL_CHECKLIST.sh  IMMEDIATE_ACTION_FIX.sh  IMPLEMENTATION_SUMMARY.md  INSTALLATION_REFACTOR_COMPLETE.md  INSTALLATION_REFACTOR_QUICKREF.md  LAUNCHER_SCRIPT_FIX.md  LAUNCHER_SCRIPT_FIX_QUICK.md  LAUNCHER_V2_CHANGES.md  LAUNCHER_V2_COMPLETE_SPEC.md  LAUNCHER_WAYLAND_OPTIMIZATION_V2.md  MAXIMIZE_CRASH_FIX.md  MSYS_PATH_FIX.md  Makefile  PERMISSION_FIX.md  PERMISSION_FIXES_VISUAL.md  PERMISSION_FIX_QUICK.md  QT_BUNDLING_CHANGES.md  QUICK_REF.md  README-static-build.md  README.md  README_LAUNCHER_DOCS.md  ROOT_CAUSE_ANALYSIS.md  RPM_FIX_SUMMARY.md  START_HERE.md  VDPAU_BUNDLE_FIX.md  (+41 more)
SysKeyBlocker/: CMakeLists.txt  SystemKeyBlocker.cpp  SystemKeyBlocker.h  SystemKeyBlocker_win.cpp  SystemKeyBlocker_x11.cpp
buidl-script/: build-from-source.sh  build-static-qt-dependency.sh
build-script/: build-from-source-static.sh  build-from-source.sh  build-missing-qt-components.sh  build-multi-arch.sh  build-shared-ffmpeg-windows.bat  build-shared-ffmpeg-windows.sh  build-sharedlib-app.sh  build-static-ffmpeg-docker.sh  build-static-ffmpeg-windows.bat  build-static-ffmpeg-windows.sh  build-static-ffmpeg.sh  build-static-qt-dependency.sh  build-static-qt-for-arm64.sh  build-static-qt-from-source.bat  build-static-qt-from-source.sh  build-static-qt-windows-docker.sh  build-static-xcb-utils.sh  build-with-static-qt.sh  cmake_local_build.sh  create-harfbuzz-cmake-config.sh  demo-multi-arch-naming.sh  docker-build-appimage.sh  docker-build-deb.sh  docker-build-rpm.sh  docker-build-shared.sh  docker-build-static.sh  docker-build.sh  docker-translation.sh  fix-gstreamer-build.sh  install-libusb-windows.bat  install-libusb-windows.sh  install-linux-fedora.sh  install-linux.sh  install-release.sh  rebuild-gst-plugins-base.sh  run-cross-build.ps1  test-gstreamer-headers.sh  update_version.py  verify-gstreamer-plugins.sh  verify-orc-integration.sh
cmake/: Configuration.cmake  FFmpeg.cmake  FindQt6Required.cmake  GStreamer.cmake  Internationalization.cmake  Resources.cmake  SourceFiles.cmake  StaticLinking.cmake
device/: DeviceInfo.cpp  DeviceInfo.h  DeviceManager.cpp  DeviceManager.h  DeviceManager_impl.h  HotplugDebounceManager.cpp  HotplugDebounceManager.h  HotplugMonitor.cpp  HotplugMonitor.h
doc/: 00_START_HERE_DELIVERY_PACKAGE.md  00_START_HERE_MASTER.md  CHANGES_SUMMARY.md  CRITICAL_FIX_MAIN_CPP.md  DOCUMENTATION_INDEX.md  GITHUB_ACTIONS_BEFORE_AFTER.md  GITHUB_ACTIONS_COMPLETE_SUMMARY.md  GITHUB_ACTIONS_DEBUG_GUIDE.md  GITHUB_ACTIONS_DOCUMENTATION_INDEX.md  GITHUB_ACTIONS_FIX_SUMMARY.md  GITHUB_ACTIONS_IMPLEMENTATION_COMPLETE.md  GITHUB_ACTIONS_QUICK_REF.md  GITHUB_ACTIONS_WAYLAND_FIX.md  LAUNCHER_CICD_FIX.md  LAUNCHER_V2_1_CHANGELOG.md  QUICK_START_GITHUB_ACTIONS.md  README.md  SOLUTION_COMPLETE.md  USB3_Companion_PortChain_Implementation.md  WAYLAND_FIX_COMPLETE.md  WAYLAND_FIX_DOCUMENTATION_INDEX.md  edid_display_settings_update.md  enhanced_hotplug_detection.md  feature.md  fedora_qt_version_compatibility.md  flatpak_installation.md  multi_language.md  physical_device_struct.md  resolutions.md  rpi_installation.md  serial_command_tracking.md  socket_example.ipynb  tcp_protocol.md  tcp_server_guide.md  uconsole.md  uconsole_troubleshooting.md
docker/: .dockerignore  BUILD_ARCHITECTURE.md  Dockerfile.alpine  Dockerfile.arm64  Dockerfile.arm64-base  Dockerfile.arm64-qt  Dockerfile.arm64-qt-deps  Dockerfile.ffmpeg-windows-static  Dockerfile.openterface-qt  Dockerfile.openterface-test-shared  Dockerfile.openterface-test-static  Dockerfile.qt-base  Dockerfile.qt-base-qtml  Dockerfile.qt-base-qtml-arm  Dockerfile.qt-complete  Dockerfile.qt-complete-arm  Dockerfile.qt-complete-arm-gstreamer  Dockerfile.qt-declarative  Dockerfile.qt-declarative-arm  Dockerfile.qt-dynamic  Dockerfile.qt-ffmpeg  Dockerfile.qt-ffmpeg-arm  Dockerfile.qt-gstreamer  Dockerfile.qt-gstreamer-arm  Dockerfile.qt-setup  Dockerfile.qt-setup-arm-slim  Dockerfile.qt-shared  Dockerfile.qt-windows-static  Dockerfile.raspbian  Dockerfile.windows-builder  INSTALLATION_SCRIPTS_REFACTOR.md  README-alpine.md  README-architecture-fix.md  README-arm64.md  README-multi-arch.md  README-static-testing.md  README-testing-workflows.md  README-testing.md  README-windows.md  README.md  (+41 more)
docs/: BUILD.md  MCPSERVERPLAN.md  MCP_SERVER_DOCUMENTATION.md  MCP_SERVER_PLAN.md  arm_docker_build_optimization.md  build_from_source_summary.md  ch32_firmware_flashing.md  feature.md  flatpak_installation.md  keyboard_layout_adding.md  preferences_pages_documentation.md  resolutions.md  rpi_installation.md  script_tool.md  serial_factory_reset_refactor.md  system-key-blocker-design.md  window_control_manager.md  window_control_manager_implementation.md
examples/: ffmpeg_recording_example.h  recording_example.cpp  recording_example.h  windowcontrolmanager_example.cpp
host/: HostManager.cpp  HostManager.h  audiomanager.cpp  audiomanager.h  audiothread.cpp  audiothread.h  cameramanager.cpp  cameramanager.h  imagecapturer.cpp  imagecapturer.h  multimediabackend.cpp  multimediabackend.h  multimediabackend_clean.h  usbcontrol.cpp  usbcontrol.h  v4l2mjpegcapture.cpp  v4l2mjpegcapture.h
packaging/: com.openterface.openterfaceQT.desktop  com.openterface.openterfaceQT.metainfo.xml  openterfaceQT-wrapper.sh
regex/: RegularExpression.cpp  RegularExpression.h
resources/: version.h
scripts/: AHKKeyboard.h  AST.h  KeyboardMouse.cpp  KeyboardMouse.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SendKeyMaps.h  Send命令语法指南.md  Token.h  build_debug.bat  build_release.bat  keyboardMouse.cpp  keyboardMouse.h  scriptEditor.cpp  scriptEditor.h  scriptExecutor.cpp  scriptExecutor.h  scriptRunner.cpp  scriptRunner.h  semanticAnalyzer.cpp  (+14 more)
(+465 files in other folders)
